--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v1
 data:
-  ansible-conf: {{ .Files.Get .Values.ansible_conf | b64enc }}
-  fe-environment: {{ .Files.Get .Values.environment_file | b64enc }}
+  ansible-conf: {{ .Values.ansible_conf | b64enc }}
+  fe-environment: {{ .Values.environment_file | b64enc }}
 kind: Secret
 metadata:
   name: secret-{{ template "sitefe.truncname" . }}
