Non Empty ans and env

--- a/templates/secrets.yaml
+++ b/templates/secrets.yaml
@@ -1,8 +1,12 @@
 ---
 apiVersion: v1
 data:
+{{- if not (quote .Values.ansible_conf | empty)  }}
   ansible-conf: {{ .Values.ansible_conf | b64enc }}
+{{- end }}
+{{- if not (quote .Values.environment_file | empty)  }}
   fe-environment: {{ .Values.environment_file | b64enc }}
+{{- end }}
 kind: Secret
 metadata:
   name: secret-{{ template "sitefe.truncname" . }}
