--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -56,7 +56,12 @@ spec:
           periodSeconds: 60
           failureThreshold: 3
         resources:
-          {{- toYaml .Values.resources | nindent 12 }}
+          limits:
+            cpu: {{ template "cpulimit" .}}
+            memory: {{ template "memorylimit" . }}
+          requests:
+            cpu: {{ template "cpuRequest" . }}
+            memory: {{ template "memoryRequest" . }}
         volumeMounts:
         {{- if .Values.storage.enabled }}
         - mountPath: /opt/siterm/
