--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -18,15 +18,15 @@ spec:
     spec:
       {{- if .Values.tolerations }}
       tolerations:
-      {{ toYaml .Values.tolerations | indent 6 }}
+      {{ .Values.tolerations | toYaml | indent 8 | trim }}
       {{- end }}
       {{- if .Values.affinity }}
       affinity:
-      {{ toYaml .Values.affinity | indent 6 }}
+      {{ .Values.affinity | toYaml | indent 8 | trim }}
       {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
-      {{ toYaml .Values.nodeSelector | indent 6 }}
+      {{ .Values.nodeSelector | toYaml | indent 8 | trim }}
       {{- end }}
       containers:
       - image: {{ template "deploymentimage" . }}
