Export SENSE Name and Namespace - to be used to scale things down

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,3 +1,5 @@
+# SENSENAME: sense-{{ template "sitefe.truncname" . }}
+# SENSENAMESPACE: {{ .Values.namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
