helm allows files use only from chart, not by using helm template

--- a/templates/sshkeysecrets.yaml
+++ b/templates/sshkeysecrets.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sshkey-{{ template "sitefe.truncname" . }}
   namespace: {{ .Values.namespace }}
 data:
-{{- range $key, $path := .Values.sshkeys }}
-  {{ $key }}: {{ $.Files.Get $path | b64enc }}
+{{- range $key, $val := .Values.sshkeys }}
+  {{ $key }}: {{ $val }}
 {{- end }}
 {{- end }}
