--- a/values.yaml
+++ b/values.yaml
@@ -34,6 +34,15 @@ storage:
   storageClassName: rook-ceph-block
   capacity: 10Gi
 
+# Persistent volume claim for Frontend logs.
+# This should not require any changes if you run ceph and no others are supported yet.
+# If you have another storage class, change it (no guarantees to work and might need manual configuration)
+# If you set it to false - there is no guarantees for persistent storage (and data might be lost at pod restart)
+logstorage:
+  enabled: true
+  storageClassName: rook-ceph-block
+  capacity: 5Gi
+
 # tolerations for your deployment. Include as many as you need and it will
 # be added to your deployment file.
 # tolerations:
