[1.5.24-rc2] add init and create dir

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -34,6 +34,15 @@ spec:
       nodeSelector:
         {{ .Values.nodeSelector | toYaml | indent 8 | trim }}
       {{- end }}
+      {{- if .Values.logstorage.enabled }}
+      initContainers:
+      - name: init-log-{{ template "sitefe.truncname" . }}
+        image: busybox
+        command: ["sh", "-c", "mkdir -p /var/log/supervisor"]
+        volumeMounts:
+        - name: pvclog-{{ template "sitefe.truncname" . }}
+          mountPath: /var/log
+      {{- end }}
       containers:
       - image: {{ template "deploymentimage" . }}
         imagePullPolicy: {{ template "deploymentpullpolicy" . }}
