--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: siterm-fe
 description: A Helm chart for Deploying SiteRM Frontend Containers
 type: application
-version: 1.5.24-rc8
+version: 1.5.3
 appVersion: "1.16.0"
