--- a/templates/persistentvolumeclaimlog.yaml
+++ b/templates/persistentvolumeclaimlog.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvclog-{{ template "sitefe.truncname" . }}
+  name: {{ .Values.logstorage.volname | default (printf "pvclog-%s" (include "sitefe.truncname" .)) }}
   namespace: {{ .Values.namespace }}
 spec:
   accessModes:
