Update documentation for cert options

--- a/values.yaml
+++ b/values.yaml
@@ -103,41 +103,6 @@ ingress:
 #    kubernetes.io/ssl-passthrough: "true"
 #    cert-manager.io/cluster-issuer: letsencrypt-prod
 
-# SSL Sertificate parameters:
-# It does support getting certificate from cert-manager or
-# from files directory inside this chart.
-# Set the correct location to hostcert and hostkey inside files directory
-# In case of cert manager - set certmanager to true
-# and all certmanager related parameters
-certmanager: false
-certmanager_params:
-  commonName: "<REPLACE_ME_TO_FQDN>"
-  dnsNames:
-    - "<REPLACE_ME_TO_FQDN>"
-  issuerRef:
-    group: cert-manager.io
-    kind: ClusterIssuer
-    name: incommon-v2-prod
-  privateKey:
-    algorithm: RSA
-    encoding: PKCS1
-    size: 4096
-# if certmanager is false - set hostcert and hostkey to true - and put all
-# certificate content. Sadly, helm does not allow to include files outside of chart
-# So local files are not possible to include.
-# Spacing is important, so make sure to keep it at 2 spaces, which points to line beginning inside file (as this is a YAML file and need structure)
-usehostcert: false
-hostcert: |
-  -----BEGIN CERTIFICATE-----
-  MIIITTCCBrWgAwIBAgIRAIQCECprMd/bWm5I5oKFx+owDQYJKoZIhvcNAQEMBQAw
-  ....
-  -----END CERTIFICATE-----
-hostkey: |
-  -----BEGIN RSA PRIVATE KEY-----
-  MIIJKQIBAAKCAgEApJNvz1WUk/iW1VBkX3UsCWdoxRpH7nYvMCrqyRbiKUI54CHu
-  ...
-  -----END RSA PRIVATE KEY-----
-
 # ===============================================================
 # Configuration parameters for Frontend:
 # These must be defined and configured here: https://github.com/sdn-sense/rm-configs
@@ -145,16 +110,6 @@ sitename: <REPLACE_ME_TO_SITENAME>
 gitrepo: "sdn-sense/rm-configs"
 branch: master
 md5: <REPLACE_ME_TO_UUID>
-
-# If you need to use your own Issuer (e.g. There is no ClusterIssuer) - set it to true.
-# Name of issuer must be same as used in certmanager_params:issuerRef:name
-# Email address for registering to server (e.g. LetsEncrypt requires that)
-# server - remove issue ACME Endpoint.
-issuer: true
-issuer_params:
-  name: sense-issuer
-  email: "juztas@gmail.com"
-  server: "https://acme-v02.api.letsencrypt.org/directory"
 
 # Sadly, helm does not allow to include files outside of chart
 # So local files are not possible to include. Modify the following
@@ -192,3 +147,76 @@ environment_file: |
 # In case ansible is configured to use ssh key, add path to private key here.
 #sshkeys:
 #  frrsshkey: files/sense-cern-fabric.nrp-nautilus.io.yaml/frrsshkey
+
+
+
+
+# SSL Certificate parameters:
+# It does support getting certificate from cert-manager or
+# from files directory inside this chart.
+# Below are 3 options supported by SiteRM Helm Charts.
+# Cert-manager depends on Kubernetes cluster and supported options.
+# Please check with your Kubernetes cluster administrator, which option is supported (ClusterIssuer, Issuer, Or none - in this case use Option 3)
+# ===================================================================================
+# Option 1: CERT MANAGER + ClusterIssuer
+# ClusterIssuer is a cluster-scoped resource, usable across all namespaces.
+#certmanager: true
+#certmanager_params:
+#  commonName: "hostname-replace-me"
+#  dnsNames:
+#    - "hostname-replace-me"
+#  issuerRef:
+#    group: cert-manager.io
+#    kind: ClusterIssuer
+#    name: incommon-v2-prod   # REPLACE BASED on your ClusterIssuer Name.
+#  privateKey:
+#    algorithm: RSA
+#    encoding: PKCS1
+#    size: 4096
+# ===================================================================================
+# Option 2: CERT MANAGER + Issuer
+# An Issuer is a namespaced resource, usable only within the same namespace it's defined in.
+# Set the correct location to hostcert and hostkey inside files directory
+# In case of cert manager - set certmanager to true
+# and all certmanager related parameters
+#certmanager: true
+#certmanager_params:
+#  commonName: "hostname-replace-me-if-deployment"
+#  dnsNames:
+#    - "hostname-replace-me-if-deployment"
+#  duration: 720h0m0s
+#  issuerRef:
+#    group: cert-manager.io
+#    kind: Issuer
+#    name: sense-issuer-agent  # Name of issuer must match issuer_params:name
+#   renewBefore: 120h0m0s
+#  privateKey:
+#    algorithm: RSA
+#    encoding: PKCS1
+#    size: 4096
+# Name of issuer must be same as used in certmanager_params:issuerRef:name
+# Email address for registering to server (e.g. LetsEncrypt requires that)
+#issuer: true
+#issuer_params:
+#  name: sense-issuer-agent # Name of issuer must match certmanager_params:issuerRef:name
+#  email: "myemailaddress@somedomain.com"
+#  server: "https://acme-v02.api.letsencrypt.org/directory"
+# ===================================================================================
+# Option 3: Manual Certificates
+# If you plan to define your own hostcert and hostkey, set certmanager: false
+# And in this case usehostcert: true
+# Also update hostcert and hostkey values.
+# IMPORTANT!!!!
+# Spacing is important, make sure to keep it at 2 spaces, which points to line beginning inside file (as this is a YAML file and need structure)
+#certmanager: false
+#usehostcert: true
+#hostcert: |
+#  -----BEGIN CERTIFICATE-----
+#  MIIITTCCBrWgAwIBAgIRAIQCECprMd/bWm5I5oKFx+owDQYJKoZIhvcNAQEMBQAw
+#  ....
+#  -----END CERTIFICATE-----
+#hostkey: |
+#  -----BEGIN RSA PRIVATE KEY-----
+#  MIIJKQIBAAKCAgEApJNvz1WUk/iW1VBkX3UsCWdoxRpH7nYvMCrqyRbiKUI54CHu
+#  ...
+#  -----END RSA PRIVATE KEY-----
